Added user form request to validate fields
